fix gap

--- a/src/sass/components/_dualsense.scss
+++ b/src/sass/components/_dualsense.scss
@@ -15,7 +15,7 @@
     &__item {
       display: flex;
       align-items: center;
-      gap: 200px;
+      gap: 230px;
       border-radius: 12px;
       flex-direction: row-reverse;
       width: 100%;
